WebCore:

2009-05-15  Adam Barth  <abarth@webkit.org>

        Reviewed by Oliver Hunt.

        https://bugs.webkit.org/show_bug.cgi?id=25741

        Append instead of throwing when insertItemBefore gets an out-of-bound
        index.

        Test: svg/dom/svglist-insertItemBefore-appends.html

        * svg/SVGList.h:
        (WebCore::SVGList::insertItemBefore):

LayoutTests:

2009-05-15  Adam Barth  <abarth@webkit.org>

        Reviewed by Oliver Hunt.

        https://bugs.webkit.org/show_bug.cgi?id=25741

        Test that insertBeforeItem behaves properly for out of bounds indices.

        * svg/dom/svglist-exception-on-out-bounds-error-expected.txt:
        * svg/dom/svglist-exception-on-out-bounds-error.html:
        * svg/dom/svglist-insertItemBefore-appends-expected.txt: Added.
        * svg/dom/svglist-insertItemBefore-appends.html: Added.



Canonical link: https://commits.webkit.org/35713@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@43795 268f45cc-cd09-0410-ab3c-d52691b4dbfc